--- a/demo.conf
+++ b/demo.conf
@@ -5,17 +5,19 @@ server.environment = 'development'
 # server listening IP
 server.socket_host = '127.0.0.1'
 # server listening port
-server.socket_port = 8080
+server.socket_port = 8106
 # number of threads (for the python code)
-server.thread_pool = 3
+server.thread_pool = 1
 # show logs in the console
 log.screen = True
 # autoreload on file update
-engine.autoreload_on = True
+engine.autoreload_on = False
 # no warning for missing app config
 checker.check_skipped_app_config = False
 # rich debug messages
 tools.cgitb.on = True
+tools.proxy.on = True
+tools.proxy.base = "http://dev.ipol.im/~haldos/ipol_demo"
 # auth tokens for downloads
 download.auth.urlbase = "https://edit.ipol.im/"
 download.auth.username = "cardelino"
