modified:   app/xxx_clg/source/optical_flow/CMakeLists.txt

--- a/app/xxx_clg/source/optical_flow/CMakeLists.txt
+++ b/app/xxx_clg/source/optical_flow/CMakeLists.txt
@@ -9,14 +9,14 @@ SET(PROJECT_BINARY_DIR bin)
 ADD_SUBDIRECTORY(source)
 
 SET(SRC ${PROJECT_SOURCE_DIR}/clg_of.c)
-SET(SRC2 ${PROJECT_SOURCE_DIR}/test_rgb2gray.c)
-SET(SRC3 ${PROJECT_SOURCE_DIR}/test_swaptiff.c)
+SET(SRC2 ${PROJECT_SOURCE_DIR}/test_rgb2gray.c ${PROJECT_SOURCE_DIR}/iio.c ${PROJECT_SOURCE_DIR}/iio.h)
+SET(SRC3 ${PROJECT_SOURCE_DIR}/test_swaptiff.c ${PROJECT_SOURCE_DIR}/iio.c ${PROJECT_SOURCE_DIR}/iio.h)
 ADD_EXECUTABLE(${PROJECT_BINARY_DIR}/test_clg_flow ${SRC})
 ADD_EXECUTABLE(${PROJECT_BINARY_DIR}/test_rgb2gray ${SRC2})
 ADD_EXECUTABLE(${PROJECT_BINARY_DIR}/test_swaptiff ${SRC3})
 TARGET_LINK_LIBRARIES(${PROJECT_BINARY_DIR}/test_clg_flow png tiff jpeg ${LIBS})
-TARGET_LINK_LIBRARIES(${PROJECT_BINARY_DIR}/test_rgb2gray jpeg tiff png ${LIBS})
-TARGET_LINK_LIBRARIES(${PROJECT_BINARY_DIR}/test_swaptiff jpeg tiff png ${LIBS})
+TARGET_LINK_LIBRARIES(${PROJECT_BINARY_DIR}/test_rgb2gray jpeg tiff png)
+TARGET_LINK_LIBRARIES(${PROJECT_BINARY_DIR}/test_swaptiff jpeg tiff png)
 
 INSTALL(TARGETS ${PROJECT_BINARY_DIR}/test_clg_flow RUNTIME DESTINATION bin)
 INSTALL(TARGETS ${PROJECT_BINARY_DIR}/test_rgb2gray RUNTIME DESTINATION bin)
